# vsf.linux

./: .gitmodules  README.md
.github/workflows/: all-in-one.yml  cmake-arm-cross-build.yml  cmake-native-build.yml  cmake-webassembly.yml  repository_dispath.yml  vsf-sync.yml  windows-build.yml
applet/: CMakeLists.txt  clang.txt  linker.ld  main.c  vsf_usr_cfg.h
applet/include/: assert.h  setjmp.h  stdint.h  uchar.h
application/: CMakeLists.txt  vsf_main.c  wamr_demo.c
application/usrapp/: CMakeLists.txt  usrapp_main.c
config/: vsf_usr_cfg.h
demo/: vsf_main.c
patch/bochs/: logio.patch  main_entry.patch
patch/busybox/: vsf_porting.patch
patch/curl/: ram_usage.patch
patch/iar/: curl.patch  curl_ramusage.patch
patch/openocd/jimtcl/: jimtcl.patch
patch/tcc/: vsf_porting.patch
patch/vsf/: webassembly.patch
patch/wamr/: windows.patch
project/cmake/aic8800/: CMakeLists.txt  linker.ld
project/cmake/aic8800.meui/: CMakeLists.txt  workspace.code-workspace
project/cmake/linux/: CMakeLists.txt
project/cmake/macos/: CMakeLists.txt  workspace.code-workspace
project/cmake/stm32h743.sdlpal/: CMakeLists.txt  linker.ld
project/cmake/webassembly/: CMakeLists.txt  workspace.code-workspace
project/iar/: .gitignore  vsf_template.ewp
project/vc/: vsf_linux.sln  vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_bochs/: .gitignore  vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_bochs/bochs/win95/: bochsrc.bxrc  cmdline.txt
project/vc_busybox/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_busybox/etc/: inittab
project/vc_elfloader/: vsf_linux.vcxproj
project/vc_git/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_git_hostsock/: vsf_linux.sln  vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_libmodbus/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_libtuv/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_libuvc/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_libwebsockets/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_lua/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_make/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_openocd/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_qt/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_quickjs/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_sdl/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_sdl2/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_tcc/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_upy/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_wamr/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vc_xone/: vsf_linux.vcxproj  vsf_linux.vcxproj.filters
project/vs_openssl/: .gitignore  vsf_linux.vcxproj  vsf_linux.vcxproj.filters
